# cargo-docserver

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: main.yml  release.yaml
assets/my-crate/: Cargo.toml
assets/your-crate/: Cargo.toml
src/: main.rs
