[package]
name = "cargo-docserver"
version = "0.1.1-alpha.0"
authors = ["Douglas Campos <qmx@qmx.me>"]
description = "starts an embedded http server for your cargo doc output"
homepage = "https://github.com/qmx/cargo-docserver"
repository = "https://github.com/qmx/cargo-docserver"
license = "MIT/Apache-2.0"

[dependencies]
structopt = "0.2.10"
hyper = "0.12.6"
futures = "0.1.23"
tokio-fs = "0.1.2"
tokio-io = "0.1.7"
cargo_metadata = "0.6.0"
mime_guess = "1.8.6"
