[package]
name = "cargo-docserver"
version = "0.3.0"
authors = ["Douglas Campos <qmx@qmx.me>"]
description = "starts an embedded http server for your cargo doc output"
homepage = "https://github.com/qmx/cargo-docserver"
repository = "https://github.com/qmx/cargo-docserver"
license = "MIT/Apache-2.0"

[dependencies]
structopt = "0.2.15"
hyper = "0.12.25"
futures = "0.1.26"
tokio-fs = "0.1.6"
tokio-io = "0.1.12"
cargo_metadata = "0.9.0"
mime_guess = "1.8.6"

[dev-dependencies]
cargo = "0.39.0"
scopeguard = "1.0.0"
